使用更好理解語法獲取 instance
Signed-off-by: twinatrick <130625933+twinatrick@users.noreply.github.com>